--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
-h1 {
-  color: orange;
+/* ブラウザがそれぞれ持っているCSSをリセットするための記述 */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.header {
+  width: 100%; /* 横幅いっぱい */
+  height: 550px; /* 高さ550px */
+  background-color: red; /* 背景色red */
+}
+
+.header-top {
+  width: 100%; /* 横幅いっぱい */
+  height: 50px; /* 高さ50px */
+  background-color: red; /* 背景色red */
+}
+
+.header-bottom {
+  width: 100%; /* 横幅いっぱい */
+  height: 500px; /* 高さ500px */
+  background-color: orange; /* 背景色orange */
+}
+
+.main {
+  width: 100%; /* 横幅いっぱい */
+  height: 1400px; /* 高さ1400px（多めに設定） */
+
+  display: flex; /* flexboxの利用 */
+  justify-content: center; /* 子要素の横並び・中央寄せ */
+
+  margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
+}
+
+.main1 {
+  width: 960px; /* 横幅960px */
+  height: 1400px; /* 高さ1400px */
+  background-color: limegreen; /* 背景色limegreen */
+
+  display: flex; /* flexboxの利用 */
+  justify-content: center; /* 子要素の横並び・中央寄せ */
+
+  margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
+}
+
+.main2 {
+  width: 500px; /* 横幅500px */
+  height: 1400px; /* 高さ1400px */
+  background-color: green; /* 背景色green */
+}
+
+.footer {
+  width: 100%; /* 横幅いっぱい */
+  height: 100px; /* 高さ100px */
+  background-color: blue; /* 背景色blue */
 }
