--- a/style.css
+++ b/style.css
@@ -6,126 +6,78 @@
   color: #6c6b6b;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
-  width: 100%; /* 横幅100% */
-  padding: 20px 0;
+  width: 90%; /* 横幅90% */
+  padding: 15px 0;
+  margin: 0 auto;
   text-align: center;
+}
+
+header .heading {
+  font-size: 32px;
 }
 
 .nav-list {
   text-align: center;
-  padding: 15px 0;
+  padding: 10px 0;
   margin: 0 auto;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
 }
 
 .nav-list-item {
   list-style: none;
   display: inline-block;
-  margin: 0px 20px;
+  margin: 0 20px;
+}
+
+.main-visual {
+  width: 100%; /* 横幅いっぱい */
+  height: 300px; /* 高さ300px */
+  background-image: URL(img/mv.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.main-visual-content {
+  width: 40%; /* 横幅40% */
+  height: 300px; /* 親の高さに揃える */
+  background-color: rgba(0, 0, 0, 0.5); /* 背景色を半透明の黒にする */
+  text-align: center; /* 文字を中央揃えにする */
+  padding-top: 105px; /* 上側の内側余白で垂直方向の位置を調整 */
+}
+
+.main-visual-text {
+  color: #fff; /* 文字色を白に変更 */
+}
+
+.main-visual-name {
+  margin-top: 30px; /* 上側の外側の余白 */
+  color: #fff; /* 文字色を白に変更 */
 }
 
 .main {
-  width: 800px;
-  height: 600px;
-  margin: 50px auto;
-}
-
-.main1 {
-  width: 800px; /* 横幅いっぱい */
-  height: 200px; /* 高さ1400px（多めに設定） */
+  width: 100%; /* 横幅いっぱい */
+  height: 1400px; /* 高さ1400px（多めに設定） */
 
   display: flex; /* flexboxの利用 */
   justify-content: center; /* 子要素の横並び・中央寄せ */
+
+  margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
 }
 
-.box1 {
-  width: 200px;
-  height: 200px;
-  background-color: #e6ffe9;
+.blog {
+  width: 600px; /* 横幅600px */
+  height: 1400px; /* 高さ1400px */
+  background-color: limegreen; /* 背景色limegreen */
 }
 
-.box2 {
-  width: 200px;
-  height: 200px;
-  background-color: #cbffd3;
-}
-
-.box3 {
-  width: 200px;
-  height: 200px;
-  background-color: #aeffbd;
-}
-
-.box4 {
-  width: 200px;
-  height: 200px;
-  background-color: #93ffab;
-}
-
-.main2 {
-  width: 800px; /* 横幅いっぱい */
-  height: 200px; /* 高さ1400px（多めに設定） */
-
-  display: flex; /* flexboxの利用 */
-  justify-content: center; /* 子要素の横並び・中央寄せ */
-}
-
-.box5 {
-  width: 200px;
-  height: 200px;
-  background-color: #f3ffd8;
-}
-
-.box6 {
-  width: 200px;
-  height: 200px;
-  background-color: #edffbe;
-}
-
-.box7 {
-  width: 200px;
-  height: 200px;
-  background-color: #e9ffa5;
-}
-
-.box8 {
-  width: 200px;
-  height: 200px;
-  background-color: #e4ff8d;
-}
-
-.main3 {
-  width: 800px; /* 横幅いっぱい */
-  height: 200px; /* 高さ1400px（多めに設定） */
-
-  display: flex; /* flexboxの利用 */
-  justify-content: center; /* 子要素の横並び・中央寄せ */
-}
-
-.box9 {
-  width: 200px;
-  height: 200px;
-  background-color: #d9e5ff;
-}
-
-.box10 {
-  width: 200px;
-  height: 200px;
-  background-color: #bad3ff;
-}
-
-.box11 {
-  width: 200px;
-  height: 200px;
-  background-color: #a4c6ff;
-}
-
-.box12 {
-  width: 200px;
-  height: 200px;
-  background-color: #8eb8ff;
+.sidebar {
+  width: 240px; /* 横幅240px */
+  height: 1400px; /* 高さ1400px */
+  background-color: palegreen; /* 背景色palegreen */
 }
 
 footer {
